# Asteroids-remastered

./: AirAmericana.h  Area.cpp  Area.h  Asteroid.cpp  Asteroid.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Entity.cpp  Entity.h  Explosion.cpp  Explosion.h  Flight.cpp  Flight.h  Game.cpp  Game.h  GameManager.cpp  GameManager.h  Heart.cpp  Heart.h  LivingSpace.cpp  LivingSpace.h  Missile.cpp  Missile.h  MultipleShots.cpp  MultipleShots.h  README.md  ResourcesManager.cpp  ResourcesManager.h  Shield.cpp  Shield.h  ShootSpeed.cpp  ShootSpeed.h  TextScore.cpp  TextScore.h  UI.cpp  UI.h  Vector.cpp  Vector.h
